# MedVisor

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  Makefile  README.md  biome.json  docker-compose.local.yml
.github/workflows/: ci.yml
ai_services/: Dockerfile  pyproject.toml
ai_services/app/: main.py
ai_services/app/models/: app.py
ai_services/app/modules/genai/: report_generator.py
ai_services/app/modules/genai/templates/: full_report_gen.jinja  report_metadata_gen.jinja
ai_services/app/modules/image_segmentation/modeling/: data.dvc  modeling.ipynb
ai_services/app/modules/speech_to_text/: transcriber.py
ai_services/app/modules/speech_to_text/modeling/: modeling.ipynb
ai_services/app/routes/: __init__.py  router_report_generator.py  router_speech_to_text.py  schemas.py
ai_services/app/services/: report_generator.py  transcriber_service.py
ai_services/app/utils/: gemini_content_generator.py  storage.py
backend/: package.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
